--- a/public/login.html
+++ b/public/login.html
@@ -113,7 +113,11 @@
 <body>
     <main class="w-full max-w-md">
         <div class="text-center mb-8">
-            <div class="text-3xl font-bold text-orange-600">10k<span class="text-brown-800">Vendor</span></div>
+             <img 
+            src="static/WhatsApp_Image_2025-11-14_at_15.22.15_e0a3a264-removebg-preview.png" 
+            alt="Pulse Parcel Logo" 
+            class="h-10 w-auto"
+        />
             <h1 class="text-2xl font-bold mt-2 mb-4">Login to Your Account</h1>
             <p class="text-sm text-gray-500 mb-6">Log in to access your cart, orders, and saved preferences. Or <a href="/index.html" class="text-orange-500 hover:text-orange-600">continue as a guest</a>.</p>
         </div>
