--- a/public/checkout.html
+++ b/public/checkout.html
@@ -258,9 +258,9 @@
         const API_BASE_URL = 'https://pulse-parcel.onrender.com/api';
         const DELIVERY_FEE = 5000;
         const FALLBACK_BANK_DETAILS = {
-            bank: 'Example Bank',
-            accountName: ' PULSE PARCLE ',
-            accountNumber: '0123456789'
+            bank: 'UNION BANK NIGERIA ',
+            accountName: ' PULSE PARCEL LIMITED',
+            accountNumber: '0236868956'
         };
 
         function showToast(message, type = 'success') {
