--- a/public/register.html
+++ b/public/register.html
@@ -114,7 +114,12 @@
     <!-- Main Content -->
     <main class="w-full max-w-md">
         <div class="text-center mb-8">
-            <div class="text-3xl font-bold text-orange-600">10k<span class="text-brown-800">Vendor</span></div>
+                 <img
+  src="static/WhatsApp_Image_2025-11-14_at_15.22.15_e0a3a264-removebg-preview.png"
+  alt="pulse logo"
+  style="display: block; margin: 0 auto; height: 48px;"
+/>
+
             <h1 class="text-2xl font-bold mt-2 mb-4">Create Your Account</h1>
             <p class="text-sm text-gray-500 mb-6">Sign up to save your cart, track orders, and enjoy faster checkouts. Or <a href="/index.html" class="text-orange-500 hover:text-orange-600">continue as a guest</a>.</p>
         </div>
@@ -129,7 +134,7 @@
             <!-- Google Sign-In Button -->
             <div class="mb-6 flex justify-center">
                 <div id="g_id_onload"
-                     data-client_id="447480791626-h9vevm3fc8heu214tbcmego0obldh1ns.apps.googleusercontent.com"
+                     data-client_id="542529826786-7pjgjk97f9r39ave2sh37llh2k6c23n8.apps.googleusercontent.com"
                      data-context="signup"
                      data-callback="handleCredentialResponse"
                      data-auto_select="false">
