--- a/public/wishlist.html
+++ b/public/wishlist.html
@@ -152,7 +152,7 @@
     <script>
         feather.replace();
 
-        const API_BASE_URL = 'https://one0kvendor.onrender.com/api';
+        const API_BASE_URL = 'https://pulse-parcel.onrender.com/api';
 
         // Toast Notification
         function showToast(message, type = 'success') {
